# trade_fastapi

./: .env.example  Dockerfile  Makefile  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 380faf35e595_create_table.py  3b111731c1ff_migration.py  422d826b20e8_create_table.py  ace6b68e0065_migration.py  b80d3ee623c9_migration.py  bde959fbbc16_migration.py
models/: models.py
src/: config.py  database.py  main.py  util.py
src/auth/: auth.py  connectors.py  models.py  router.py  user.py  user_manager.py
src/chat/: models.py  router.py
src/operations/: models.py  router.py  schema.py
src/pages/: router.py
src/tasks/: router.py  tasks.py
src/templates/: base.html  chat.html  search.html
tests/: conftest.py  test_auth.py  test_operations.py
